<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcomeConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFF8D"
        tools:context=".WelcomeFragment">

        <TextView
            android:id="@+id/welcomeText"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcomeText"
            android:textColor="#00ACC1"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/teamATextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/teamATextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/teamAHintText"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/teamBTextView"
            app:layout_constraintEnd_toEndOf="@+id/teamBTextView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/teamBTextView"
            app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

        <EditText
            android:id="@+id/teamBTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/teamBHintText"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/startBtn"
            app:layout_constraintEnd_toEndOf="@+id/startBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/startBtn"
            app:layout_constraintTop_toBottomOf="@+id/teamATextView" />

        <Button
            android:id="@+id/startBtn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnText"
            android:textAllCaps="true"
            android:textColor="#E040FB"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/welcomeText"
            app:layout_constraintStart_toStartOf="@+id/welcomeText"
            app:layout_constraintTop_toBottomOf="@+id/teamBTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>